// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Breadcrumb component should render breadcrumb with aria-label 1`] = `
<Breadcrumb
  aria-label="custom label"
>
  <nav
    aria-label="custom label"
    className="pf-c-breadcrumb"
    data-ouia-component-id={2}
    data-ouia-component-type="PF4/Breadcrumb"
    data-ouia-safe={true}
  >
    <ol
      className="pf-c-breadcrumb__list"
    />
  </nav>
</Breadcrumb>
`;

exports[`Breadcrumb component should render breadcrumb with children 1`] = `
<Breadcrumb>
  <nav
    aria-label="Breadcrumb"
    className="pf-c-breadcrumb"
    data-ouia-component-id={3}
    data-ouia-component-type="PF4/Breadcrumb"
    data-ouia-safe={true}
  >
    <ol
      className="pf-c-breadcrumb__list"
    >
      <BreadcrumbItem
        to="#"
      >
        <li
          className="pf-c-breadcrumb__item"
        >
          <a
            className="pf-c-breadcrumb__link"
            href="#"
            target={null}
          >
            Item 1
          </a>
          <span
            className="pf-c-breadcrumb__item-divider"
          >
            <AngleRightIcon
              color="currentColor"
              noVerticalAlign={false}
              size="sm"
            >
              <svg
                aria-hidden={true}
                aria-labelledby={null}
                fill="currentColor"
                height="1em"
                role="img"
                style={
                  Object {
                    "verticalAlign": "-0.125em",
                  }
                }
                viewBox="0 0 256 512"
                width="1em"
              >
                <path
                  d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                  transform=""
                />
              </svg>
            </AngleRightIcon>
          </span>
        </li>
      </BreadcrumbItem>
       
      <BreadcrumbItem
        to="#"
      >
        <li
          className="pf-c-breadcrumb__item"
        >
          <a
            className="pf-c-breadcrumb__link"
            href="#"
            target={null}
          >
            Item 1
          </a>
          <span
            className="pf-c-breadcrumb__item-divider"
          >
            <AngleRightIcon
              color="currentColor"
              noVerticalAlign={false}
              size="sm"
            >
              <svg
                aria-hidden={true}
                aria-labelledby={null}
                fill="currentColor"
                height="1em"
                role="img"
                style={
                  Object {
                    "verticalAlign": "-0.125em",
                  }
                }
                viewBox="0 0 256 512"
                width="1em"
              >
                <path
                  d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                  transform=""
                />
              </svg>
            </AngleRightIcon>
          </span>
        </li>
      </BreadcrumbItem>
    </ol>
  </nav>
</Breadcrumb>
`;

exports[`Breadcrumb component should render breadcrumb with className 1`] = `
<Breadcrumb
  className="className"
>
  <nav
    aria-label="Breadcrumb"
    className="pf-c-breadcrumb className"
    data-ouia-component-id={1}
    data-ouia-component-type="PF4/Breadcrumb"
    data-ouia-safe={true}
  >
    <ol
      className="pf-c-breadcrumb__list"
    />
  </nav>
</Breadcrumb>
`;

exports[`Breadcrumb component should render default breadcrumb 1`] = `
<Breadcrumb>
  <nav
    aria-label="Breadcrumb"
    className="pf-c-breadcrumb"
    data-ouia-component-id={0}
    data-ouia-component-type="PF4/Breadcrumb"
    data-ouia-safe={true}
  >
    <ol
      className="pf-c-breadcrumb__list"
    />
  </nav>
</Breadcrumb>
`;
